--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,23 @@
-[project]
+[tool.poetry]
 name = "boringbot"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Aleksey Nikitin",email = "nick12.11.2014@gmail.com"}
-]
+authors = ["Aleksey Nikitin <nick12.11.2014@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "aiogram (>=3.21.0,<4.0.0)",
-    "fastapi (>=0.116.1,<0.117.0)",
-    "pydantic (>=2.11.7,<3.0.0)",
-    "pytest (>=8.4.1,<9.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+aiogram = "^3.21.0"
+pydantic-settings = "^2.10.1"
+pyngrok = "^7.2.12"
+fastapi = "^0.116.1"
+deep-translator = "^1.11.4"
+motor = "^3.7.1"
+google = "^3.0.0"
+google-cloud-translate = "^3.21.1"
+uvicorn = "^0.35.0"
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
