--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ motor = "^3.7.1"
 google = "^3.0.0"
 google-cloud-translate = "^3.21.1"
 uvicorn = "^0.35.0"
+dependency-injector = "^4.48.1"
 
 
 [build-system]
