--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ google = "^3.0.0"
 google-cloud-translate = "^3.21.1"
 uvicorn = "^0.35.0"
 dependency-injector = "^4.48.1"
+cloudflared = "^1.0.0.2"
 
 
 [build-system]
