--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ google-cloud-translate = "^3.21.1"
 uvicorn = "^0.35.0"
 dependency-injector = "^4.48.1"
 cloudflared = "^1.0.0.2"
+pytest = "^8.4.1"
+pytest-asyncio = "^1.1.0"
+coverage = "^7.10.6"
 
 
 [build-system]
