--- a/.github/workflows/git-dev-ci-cd.yml
+++ b/.github/workflows/git-dev-ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
         run: pip install poetry
 
       - name: Install dependencies
-        run: poetry install --no-interaction --no-ansi
+        run: poetry install --no-interaction --no-ansi --no-root
 
       - name: Run tests
         run: pytest -v
