--- a/.github/workflows/git-dev-ci-cd.yml
+++ b/.github/workflows/git-dev-ci-cd.yml
@@ -22,4 +22,4 @@ jobs:
         run: poetry install --no-interaction --no-ansi --no-root
 
       - name: Run tests
-        run: pytest -v
+        run: python pytest -v
